atualização arquivo css

--- a/style.css
+++ b/style.css
@@ -1,32 +1,53 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1 class="titulo">código secreto</h1>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  <main class="main">
-    <section class="form box">
-  
-      <label for="input-texto">Apenas letras minúsculas, sem acento</label>
-      <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="insira o texto aqui">
-      <input class="btn" type="submit" value="criptografar!" id="btn-cripto">
-      <input class="btn" type="submit" value="descriptografar!" id="btn-descripto">
-    </section>
-  
-    <section class="msg box">
-      <h2 id="">Mensagem criptografada:</h2>
-      <input class="text-input" type="text" id="msg"></input>
-      <button class="btn" type="submit" value="copiar" id="btn-copy">Copiar</button>
-    </section>
+body {
+  background-color: lightgray;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
-  </main>
+.main {
+  width: 80vw;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
 
-  <script src="script.js"></script>
-</body>
-</html>
+.titulo {
+  padding: 15px;
+  width: 30vw;
+  margin: auto;
+
+}
+
+.box {
+  padding: 10px;
+  margin: 0 10px 0 10px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 0.5em;
+  width: 30vw;
+  height: auto;
+}
+
+.btn {
+  border: 0;
+  color: white;
+  font-weight: bold;
+  background-color: blue;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 0.5em;
+}
+
+.text-input {
+  border-radius: 0.5em;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  display: block;
+  padding: 0.5em;
+  width: 100%;
+  height: 50px;
+}
