--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
 }
 
 .titulo {
+  font-family: Comic Sans Ms;
+  font-size: 40px;
+  color: blue;
   padding: 15px;
   width: 30vw;
   margin: auto;
@@ -50,4 +53,12 @@ body {
   padding: 0.5em;
   width: 100%;
   height: 50px;
+}
+
+.rodape{
+  text-align: center;
+}
+
+.contatos{
+  text-align: center;
 }
