--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@
 body {
   background-color: lightgray;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
 }
 
 .main {
-  width: 80vw;
-  margin: auto;
   display: flex;
   justify-content: center;
 }
@@ -20,7 +23,7 @@ body {
   text-align: center; 
   color: blue;
   font-size: 40px;
-  margin: 20px 0;;
+  margin: 50px 0;
  }
 
 .box {
@@ -69,4 +72,20 @@ footer img{
 .copyright{
   text-align: center;
   margin: 10px 0; 
+}
+
+@media(max-width: 800px){
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+  }
+  .box {
+    padding: 10px;
+    margin: 10px 0;
+    width: 90vw;
+    height: auto;
+  }
 }
